# SimplePinsAPI

./: .gitignore  API_Design_Documentation.md  README.md
.github/workflows/: deploy.yml
SimpleAPI_Python/: .dockerignore  Dockerfile  jwt_secret_generator.sh  pyproject.toml
SimpleAPI_Python/.github/workflows/: deploy.yml
SimpleAPI_Python/app/: main.py
SimpleAPI_Python/app/api/: dependencies.py
SimpleAPI_Python/app/api/v1/: api.py
SimpleAPI_Python/app/api/v1/endpoints/: auth.py  pin.py  user.py
SimpleAPI_Python/app/core/: config.example.py  config.py  security.py
SimpleAPI_Python/app/db/: database.py
SimpleAPI_Python/app/models/: auth.py  pin.py  user.py
SimpleAPI_Python/app/schemas/: pin.py  token.py  user.py
SimpleAPI_Python/app/services/: auth.py  pin.py  user.py
SimpleAPI_Python/k8s/: api.yaml  migrate.yaml  mysql.yaml
SimpleAPI_Python/migrations/: schema.sql
SimpleAPI_Python/tests/: conftest.py  test_auth.py  test_pin.py  test_user.py
docs/: API_Design_Documentation.md  API_ERD.drawio
