[project]
name = "simpleapi-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.42.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app"]
executionEnvironments = [
  { root = "app" }
]
